<resources>
    <string name="app_name">My Project Materials</string>
    <string name="About">About Us</string>
    <string name="help">Help</string>
    <string name="contacts">Contact Us</string>
    <string name="services">Services</string>
    <string name="home">Home</string>
    <string name="contact_form">Contact Form</string>
    <string name="your_name">Your Name</string>
    <string name="email">      Email Adress</string>
    <string name="subject">Subject</string>
    <string name="send_message">Send Message</string>
    <string name="message">Message</string>
    <string name="action_settings">Settings</string>
    <string name="send">Send</string>
    <string name="type_here">Type Here</string>
    <string name="title_activity_home">Home</string>
    <string name="steps">STEPS INVOLVED IN GETTING A PROJECT MATERIAL</string>
    <string name="step1"><b>step 1: </b> Open our mobile App, click on your department, select project
    topics from the list of project topics of your department</string>
    <string name="step2"><b>step 2: </b> After the approval of one topic you comeback to the App and
    pay the sum of #3000 by online payment, transfer or deposit </string>
    <string name="step3"><b>step 3: </b> send us a message with your name, you email and the project topic </string>
    <string name="step4"><b>step 4: </b> check your mail after 1 hour of your payment</string>
    <string name="thanks">Quality Assured</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="computer">Computer Science</string>
    <string name="maths">Mathematics</string>
    <string name="Statistics">Statistics</string>
    <string name="chemistry">Chemistry</string>
    <string name="physics">Physics</string>
    <string name="civil">Civil Engineering</string>
    <string name="elect">Electrical Electronics Engineering</string>
    <string name="chem_engine">Chemical Engineering</string>
    <string name="mechanical">Mechanical Engineering </string>
    <string name="comp_engine">Computer Engineering</string>
    <string name="accounting">Accountancy</string>
    <string name="business">Business Admin and Mgt</string>
    <string name="banking">Banking and Finance</string>
    <string name="economics">Economics</string>
    <string name="pub_admin">Public Administration</string>
    <string name="masscom">Mass Communication</string>
    <string name="quantity_survey">Quantity Survey</string>
    <string name="Survey_geometry">Survey and Geometry(SUG)</string>
    <string name="building_tech">Building Technology</string>
    <string name="biochemistry">Bio-Chemistry</string>
    <string name="microbiology">Micro Biology</string>
    <string name="slt">Science Lab Tech</string>
    <string name="foodtech">Food Technology</string>
    <string name="hmt">Hospitality Management and Tourism</string>


</resources>
