<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.henry.myprojectmaterials.ContactUs">

    <!-- TODO: Update blank fragment layout -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:background="@drawable/whiteflower"
            android:gravity="center">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                style="@style/AppName"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary">
            <Button
                android:id="@+id/btnHome"
                android:layout_width="0dp"
                android:layout_weight="1"
                style="@style/nav"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimary"
                android:text="@string/home"/>
            <Button
                android:id="@+id/btnServices"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimary"
                android:text="@string/services"/>
            <Button
                android:id="@+id/btnAbout"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimary"
                android:text="@string/About"/>
            <Button
                android:id="@+id/btnHelp"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimary"
                android:text="@string/help" />
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Contact My Project Material"
            android:textStyle="bold"
            android:textSize="20sp"
            android:textColor="#142c63"
            android:layout_marginTop="30dp"
            android:layout_centerHorizontal="true"/>

        <ImageView
            android:id="@+id/support"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="50dp"
            android:src="@drawable/person2"
            />
        <LinearLayout
            android:id="@+id/icons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="80dp"
            android:gravity="center"
            android:layout_below="@+id/support">
            <RelativeLayout
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginRight="20dp"
                android:layout_marginLeft="20dp"
                android:background="@drawable/curve">
                <ImageView
                    android:id="@+id/call"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_centerInParent="true"
                    android:src="@drawable/phone"
                   />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginRight="20dp"
                android:layout_marginLeft="20dp"
                android:background="@drawable/curve">
                <ImageView
                    android:id="@+id/mail"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_centerInParent="true"
                    android:src="@drawable/mail"
                    />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginRight="20dp"
                android:layout_marginLeft="20dp"
                android:background="@drawable/curve">
                <ImageView
                    android:id="@+id/chat"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_centerInParent="true"
                    android:src="@drawable/message"
                    />

            </RelativeLayout>
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="We Will Contact you soon"
            android:layout_below="@+id/icons"
            android:textStyle="bold"
            android:textSize="14sp"
            android:textColor="@color/colorPrimaryDark"
            android:layout_marginTop="30dp"
            android:layout_centerHorizontal="true"/>


    </LinearLayout>


</ScrollView >
